--- a/admin/src/app/pages/products/list/add-product-dialog/add-product-dialog.component.html
+++ b/admin/src/app/pages/products/list/add-product-dialog/add-product-dialog.component.html
@@ -32,27 +32,7 @@
 						</mat-error>
 					</mat-form-field>
 				</div>
-				<div class="col-lg-4 kt-margin-bottom-20-mobile">
-					<mat-form-field class="mat-form-field-fluid">
-						<mat-select
-							placeholder="Select Category"
-							name="category"
-							[(ngModel)]="product.category_id"
-							required
-						>
-							<mat-option
-								*ngFor="let category of categories"
-								[value]="category.id"
-							>
-								{{ category.name }}
-							</mat-option>
-						</mat-select>
-						<mat-error
-							>Category is
-							<strong>required</strong>
-						</mat-error>
-					</mat-form-field>
-				</div>
+
 				<div class="col-lg-4 kt-margin-bottom-20-mobile">
 					<mat-form-field class="mat-form-field-fluid">
 						<input
@@ -63,15 +43,13 @@
 							[(ngModel)]="product.name"
 							required
 						/>
-						<mat-error
-							>Name is
+						<mat-error>
+							Name is
 							<strong>required</strong>
 						</mat-error>
 					</mat-form-field>
 				</div>
-			</div>
-			<div class="separator separator-dashed my-6"></div>
-			<div class="form-group row">
+
 				<div class="col-lg-4 kt-margin-bottom-20-mobile">
 					<mat-form-field class="mat-form-field-fluid">
 						<textarea
@@ -82,32 +60,46 @@
 							name="description"
 							[(ngModel)]="product.description"
 						></textarea>
-						<mat-hint align="end"
-							>{{ description.value.length }} / 400</mat-hint
-						>
-						<mat-error
-							>Description is
+						<mat-hint align="end">
+							{{ description.value.length }} / 400
+						</mat-hint>
+						<mat-error>
+							Description is
 							<strong>required</strong>
 						</mat-error>
 					</mat-form-field>
 				</div>
+			</div>
+
+			<div class="separator separator-dashed my-6"></div>
+
+			<div class="form-group row">
 				<div class="col-lg-4 kt-margin-bottom-20-mobile">
 					<mat-form-field class="mat-form-field-fluid">
 						<span matPrefix>Rs: &nbsp;</span>
 						<input
 							matInput
 							type="number"
-							placeholder="Price"
-							name="price"
-							[(ngModel)]="product.price"
-							required
+							placeholder="Purchase Price"
+							name="purchase_price"
+							[(ngModel)]="product.purchase_price"
 						/>
-						<mat-error
-							>Price
-							<strong>required</strong>
-						</mat-error>
 					</mat-form-field>
 				</div>
+
+				<div class="col-lg-4 kt-margin-bottom-20-mobile">
+					<mat-form-field class="mat-form-field-fluid">
+						<span matPrefix>Rs: &nbsp;</span>
+						<input
+							matInput
+							type="number"
+							placeholder="Sale Price"
+							name="sale_price"
+							[(ngModel)]="product.sale_price"
+						/>
+					</mat-form-field>
+				</div>
+
 				<div class="col-lg-4 kt-margin-bottom-20-mobile">
 					<mat-form-field class="mat-form-field-fluid">
 						<span matPrefix>Rs: &nbsp;</span>
@@ -135,8 +127,8 @@
 								{{ unit.name }}
 							</mat-option>
 						</mat-select>
-						<mat-error
-							>Unit is
+						<mat-error>
+							Unit is
 							<strong>required</strong>
 						</mat-error>
 					</mat-form-field>
@@ -151,42 +143,16 @@
 							[(ngModel)]="product.unit_quantity"
 							required
 						/>
-						<mat-error
-							>Unit Quantity is
+						<mat-error>
+							Unit Quantity is
 							<strong>required</strong>
 						</mat-error>
 					</mat-form-field>
 				</div>
-				<div class="col-lg-4 kt-margin-bottom-20-mobile">
-					<mat-form-field class="mat-form-field-fluid">
-						<mat-select
-							placeholder="Sort Order"
-							name="order"
-							[(ngModel)]="product.order"
-						>
-							<mat-option value=""> No Order </mat-option>
-							<mat-option [value]="1"> 1 </mat-option>
-							<mat-option [value]="2"> 2 </mat-option>
-							<mat-option [value]="3"> 3 </mat-option>
-							<mat-option [value]="4"> 4 </mat-option>
-						</mat-select>
-					</mat-form-field>
-				</div>
-				<div class="col-lg-4 kt-margin-bottom-20-mobile">
-					<ng-select
-						[items]="vendors"
-						[multiple]="true"
-						bindLabel="name"
-						name="vendor"
-						placeholder="Select Vendor"
-						bindValue="id"
-						[(ngModel)]="product.vendor_ids"
-						required
-					>
-					</ng-select>
-				</div>
 			</div>
+
 			<div class="separator separator-dashed my-6"></div>
+
 			<div class="form-group row">
 				<div class="col-lg-4 kt-margin-bottom-20-mobile">
 					<input type="file" (change)="fileChangeEvent($event)" name="image" />
