--- a/admin/src/app/modules/auth/login/login.component.html
+++ b/admin/src/app/modules/auth/login/login.component.html
@@ -11,7 +11,7 @@
 		<!--begin::Title-->
 		<div class="pb-13 pt-lg-0 pt-5">
 			<h3 class="font-weight-bolder text-dark font-size-h4 font-size-h1-lg">
-				Welcome to Dastak Sitara!
+				Welcome to Capri Traders!
 			</h3>
 		</div>
 		<!--end::Title-->
