--- a/admin/src/app/pages/sales/sales.component.html
+++ b/admin/src/app/pages/sales/sales.component.html
@@ -9,7 +9,7 @@
 			</button>
 		</div>
 	</div>
-	<div class="card-body">
+	<div>
 		<form class="form" (ngSubmit)="onSubmit()" #f="ngForm">
 			<div class="card-body">
 				<div class="card-body-progress">
@@ -17,7 +17,7 @@
 				</div>
 
 				<div class="form-group row">
-					<div class="col-lg-4 kt-margin-bottom-20-mobile">
+					<div class="col-lg-6 kt-margin-bottom-20-mobile">
 						<mat-form-field class="mat-form-field-fluid">
 							<mat-select
 								placeholder="Company Head"
@@ -39,7 +39,7 @@
 						</mat-form-field>
 					</div>
 
-					<div class="col-lg-4 kt-margin-bottom-20-mobile">
+					<div class="col-lg-2 kt-margin-bottom-20-mobile">
 						<mat-form-field class="mat-form-field-fluid">
 							<input
 								type="number"
@@ -51,7 +51,7 @@
 						</mat-form-field>
 					</div>
 
-					<div class="col-lg-4 kt-margin-bottom-20-mobile">
+					<div class="col-lg-2 kt-margin-bottom-20-mobile">
 						<mat-form-field class="mat-form-field-fluid">
 							<input
 								type="number"
@@ -62,26 +62,30 @@
 							/>
 						</mat-form-field>
 					</div>
-				</div>
 
-				<div class="separator separator-dashed my-6"></div>
+					<div class="col-lg-2 kt-margin-bottom-20-mobile">
+						<mat-form-field class="mat-form-field-fluid">
+							<input
+								type="number"
+								matInput
+								placeholder="GRN"
+								name="grn"
+								[(ngModel)]="sale.grn"
+							/>
+						</mat-form-field>
+					</div>
+				</div>
 
 				<div class="form-group row">
 					<div class="col-lg-4 kt-margin-bottom-20-mobile">
 						<mat-form-field class="mat-form-field-fluid">
-							<mat-select
-								placeholder="Part Name"
-								name="party_name"
+							<input
+								matInput
+								type="text"
+								placeholder="Party Name"
+								name="sale.party_name"
 								[(ngModel)]="sale.party_name"
-								required
-							>
-								<mat-option
-									*ngFor="let party_name of party_names"
-									[value]="party_name.id"
-								>
-									{{ party_name.name }}
-								</mat-option>
-							</mat-select>
+							/>
 							<mat-error>
 								Party Name is
 								<strong>required</strong>
@@ -89,7 +93,7 @@
 						</mat-form-field>
 					</div>
 
-					<div class="col-lg-4 kt-margin-bottom-20-mobile">
+					<div class="col-lg-2 kt-margin-bottom-20-mobile">
 						<mat-form-field class="mat-form-field-fluid">
 							<mat-select
 								placeholder="Pay Mode"
@@ -105,13 +109,12 @@
 								</mat-option>
 							</mat-select>
 							<mat-error>
-								Party Name is
 								<strong>required</strong>
 							</mat-error>
 						</mat-form-field>
 					</div>
 
-					<div class="col-lg-4 kt-margin-bottom-20-mobile">
+					<div class="col-lg-2 kt-margin-bottom-20-mobile">
 						<mat-form-field class="mat-form-field-fluid">
 							<mat-select
 								placeholder="Pay Status"
@@ -127,7 +130,6 @@
 								</mat-option>
 							</mat-select>
 							<mat-error>
-								Party Name is
 								<strong>required</strong>
 							</mat-error>
 						</mat-form-field>
@@ -144,77 +146,65 @@
 							/>
 						</mat-form-field>
 					</div>
-
-					<div class="col-lg-4 kt-margin-bottom-20-mobile">
-						<mat-form-field class="mat-form-field-fluid">
-							<span matPrefix>Rs: &nbsp;</span>
-							<input
-								matInput
-								type="number"
-								placeholder="Sale Price"
-								name="sale_price"
-							/>
-						</mat-form-field>
-					</div>
-
-					<div class="col-lg-4 kt-margin-bottom-20-mobile">
-						<mat-form-field class="mat-form-field-fluid">
-							<span matPrefix>Rs: &nbsp;</span>
-							<input
-								matInput
-								type="number"
-								placeholder="Discount"
-								name="discount"
-							/>
-						</mat-form-field>
-					</div>
 				</div>
-				<div class="separator separator-dashed my-6"></div>
+
 				<div class="form-group row">
-					<div class="col-lg-4 kt-margin-bottom-20-mobile">
-						<mat-form-field class="mat-form-field-fluid">
-							<mat-select placeholder="Select Unit" name="unit" required>
-							</mat-select>
-							<mat-error>
-								Unit is
-								<strong>required</strong>
-							</mat-error>
-						</mat-form-field>
-					</div>
-					<div class="col-lg-4 kt-margin-bottom-20-mobile">
+					<div class="col-lg-3 kt-margin-bottom-20-mobile">
 						<mat-form-field class="mat-form-field-fluid">
 							<input
 								matInput
-								type="number"
-								placeholder="Unit Quantity"
-								name="unit_quantity"
+								type="text"
+								placeholder="Enter Item"
+								name="product_name"
 								required
 							/>
 							<mat-error>
-								Unit Quantity is
+								Item is
+								<strong>required</strong>
+							</mat-error>
+						</mat-form-field>
+					</div>
+
+					<div class="col-lg-3 kt-margin-bottom-20-mobile">
+						<mat-form-field class="mat-form-field-fluid">
+							<input
+								matInput
+								type="number"
+								placeholder="Quantity"
+								name="quantity"
+								required
+							/>
+							<mat-error>
+								Quantity is
+								<strong>required</strong>
+							</mat-error>
+						</mat-form-field>
+					</div>
+
+					<div class="col-lg-3 kt-margin-bottom-20-mobile">
+						<mat-form-field class="mat-form-field-fluid">
+							<input
+								matInput
+								type="number"
+								placeholder="Rate"
+								name="rate"
+								required
+							/>
+							<mat-error>
+								Rate is
 								<strong>required</strong>
 							</mat-error>
 						</mat-form-field>
 					</div>
 				</div>
 
-				<div class="separator separator-dashed my-6"></div>
-
-				<div class="form-group row"></div>
 				<div class="separator separator-dashed my-6"></div>
 			</div>
 			<div class="card-footer">
 				<div class="d-flex justify-content-between">
 					<div class="mr-2"></div>
 					<div>
-						<button
-							type="button"
-							mat-raised-button
-							mat-dialog-close
-							cdkFocusInitial
-						>
-							Cancel</button
-						>&nbsp;
+						&nbsp;
 						<button
 							type="button"
 							mat-raised-button
