--- a/admin/src/app/pages/sales/sales.component.html
+++ b/admin/src/app/pages/sales/sales.component.html
@@ -206,10 +206,9 @@
 						</mat-form-field>
 					</div>
 					<div class="col-lg-2 kt-margin-bottom-20-mobile">
-						<button (click)="AddProductToSaleItems()" class="btn btn-primary">
+						<a (click)="AddProductToSaleItems()" class="btn btn-primary">
 							Add
-						</button>
-						<button class="ml-2 btn btn-danger">Remove</button>
+						</a>
 					</div>
 				</div>
 
@@ -276,17 +275,21 @@
 						<ng-container matColumnDef="actions">
 							<mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
 							<mat-cell *matCellDef="let product; let index = index">
-								<button mat-icon-button color="primary" (click)="editSaleItemsProduct(product)">
-									<mat-icon>create</mat-icon></button
+								<a
+									mat-icon-button
+									color="primary"
+									(click)="editSaleItemsProduct(product, index)"
+								>
+									<mat-icon>create</mat-icon></a
 								>&nbsp;
-								<button
+								<a
 									mat-icon-button
 									color="warn"
-									(click)="removeFromSaleItems(product.id)"
+									(click)="removeFromSaleItems(index)"
 									type="button"
 								>
 									<mat-icon>delete</mat-icon>
-								</button>
+								</a>
 							</mat-cell>
 						</ng-container>
 						<!-- Symbol Column -->
@@ -334,7 +337,6 @@
 							type="button"
 							mat-raised-button
 							color="primary"
-							(click)="onSubmit()"
 							[disabled]="f.invalid || f.pristine"
 						>
 							Save
