--- a/admin/src/app/pages/items/list/list.component.html
+++ b/admin/src/app/pages/items/list/list.component.html
@@ -1,15 +1,11 @@
 <div class="card card-custom">
 	<div class="card-header">
 		<div class="card-title">
-			<h3>Products</h3>
+			<h3>Items</h3>
 		</div>
 		<div class="card-toolbar">
-			<button
-				class="btn btn-primary"
-				(click)="addProduct()"
-				[disabled]="!loaded"
-			>
-				Add Product
+			<button class="btn btn-primary" (click)="addItem()" [disabled]="!loaded">
+				Add Item
 			</button>
 		</div>
 	</div>
@@ -23,7 +19,7 @@
 						<mat-form-field class="mat-form-field-fluid">
 							<input
 								matInput
-								placeholder="Search Products"
+								placeholder="Search Items"
 								[formControl]="search"
 							/>
 						</mat-form-field>
@@ -33,7 +29,7 @@
 		</div>
 		<!-- end::FILTERS & GROUP ACTIONS -->
 		<div class="mat-table-wrapper">
-			<mat-table #table [dataSource]="products">
+			<mat-table #table [dataSource]="items">
 				<!--- Note that these columns can be defined in any order.
 				The actual rendered columns are set as a property on the row definition" -->
 				<!-- Name Column -->
@@ -93,31 +89,27 @@
 				<!-- Actions Column -->
 				<ng-container matColumnDef="actions">
 					<mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
-					<mat-cell *matCellDef="let product; let index = index">
-						<button
-							mat-icon-button
-							color="primary"
-							(click)="editProduct(product)"
-						>
+					<mat-cell *matCellDef="let item; let index = index">
+						<button mat-icon-button color="primary" (click)="editItem(item)">
 							<mat-icon>create</mat-icon></button
 						>&nbsp;
 						<button
 							mat-icon-button
 							color="warn"
 							type="button"
-							(click)="deleteProduct(product.id, index)"
+							(click)="deleteItem(item.id, index)"
 						>
 							<mat-icon>delete</mat-icon>
 						</button>
 						<button
 							mat-icon-button
-							[color]="product.is_visible ? 'primary' : 'light'"
+							[color]="item.is_visible ? 'primary' : 'light'"
 							type="button"
-							(click)="toggleVisiblity(product)"
-							[disabled]="product.disabled"
+							(click)="toggleVisiblity(item)"
+							[disabled]="item.disabled"
 						>
-							<mat-icon *ngIf="product.is_visible">visibility</mat-icon>
-							<mat-icon *ngIf="!product.is_visible">visibility_off</mat-icon>
+							<mat-icon *ngIf="item.is_visible">visibility</mat-icon>
+							<mat-icon *ngIf="!item.is_visible">visibility_off</mat-icon>
 						</button>
 					</mat-cell>
 				</ng-container>
@@ -127,10 +119,10 @@
 			</mat-table>
 
 			<!-- Message for empty data  -->
-			<div class="mat-table-message" *ngIf="loaded && products.length == 0">
+			<div class="mat-table-message" *ngIf="loaded && items.length == 0">
 				No records found
 			</div>
-			<div class="mat-table-message" *ngIf="!loaded && !products.length">
+			<div class="mat-table-message" *ngIf="!loaded && !items.length">
 				Please wait....
 			</div>
 		</div>
@@ -144,7 +136,7 @@
 			<mat-paginator
 				[pageSize]="pageSize"
 				[showFirstLastButtons]="true"
-				[length]="totalProducts"
+				[length]="totalItems"
 			></mat-paginator>
 		</div>
 	</div>
