--- a/admin/src/app/pages/purchases/edit/edit.component.html
+++ b/admin/src/app/pages/purchases/edit/edit.component.html
@@ -9,7 +9,7 @@
 				<input
 					class="form-control"
 					placeholder="Quantity"
-					[(ngModel)]="product.quantity"
+					[(ngModel)]="item.quantity"
 					name="quantity"
 					required
 				/>
@@ -20,7 +20,7 @@
 				<input
 					class="form-control"
 					placeholder="Rate"
-					[(ngModel)]="product.rate"
+					[(ngModel)]="item.rate"
 					name="rate"
 					required
 				/>
