--- a/admin/src/app/pages/purchases/purchases.component.html
+++ b/admin/src/app/pages/purchases/purchases.component.html
@@ -4,9 +4,7 @@
 			<h3>Sales</h3>
 		</div>
 		<div class="card-toolbar">
-			<button class="btn btn-primary" (click)="addProduct()">
-				Add Product
-			</button>
+			<button class="btn btn-primary" (click)="addItem()">Add Item</button>
 		</div>
 	</div>
 	<div>
@@ -153,16 +151,13 @@
 					<div class="col-lg-3 kt-margin-bottom-20-mobile">
 						<mat-form-field class="mat-form-field-fluid">
 							<mat-select
-								[(ngModel)]="selectedProduct.id"
+								[(ngModel)]="selectedItem.id"
 								placeholder="Enter Item"
-								name="product"
+								name="item"
 								required
 							>
-								<mat-option
-									*ngFor="let product of products"
-									[value]="product.id"
-								>
-									{{ product.name }}
+								<mat-option *ngFor="let item of items" [value]="item.id">
+									{{ item.name }}
 								</mat-option>
 							</mat-select>
 							<mat-error>
@@ -180,7 +175,7 @@
 								placeholder="Quantity"
 								name="quantity"
 								required
-								[(ngModel)]="selectedProduct.quantity"
+								[(ngModel)]="selectedItem.quantity"
 							/>
 							<mat-error>
 								Quantity is
@@ -197,7 +192,7 @@
 								placeholder="Rate"
 								name="rate"
 								required
-								[(ngModel)]="selectedProduct.rate"
+								[(ngModel)]="selectedItem.rate"
 							/>
 							<mat-error>
 								Rate is
@@ -206,7 +201,7 @@
 						</mat-form-field>
 					</div>
 					<div class="col-lg-2 kt-margin-bottom-20-mobile">
-						<button (click)="AddProductToSaleItems()" class="btn btn-primary">
+						<button (click)="AddItemToSaleItems()" class="btn btn-primary">
 							Add
 						</button>
 						<button class="ml-2 btn btn-danger">Remove</button>
@@ -217,7 +212,7 @@
 			</div>
 			<!-- Sales Form End -->
 
-			<!-- Product Details Table Start -->
+			<!-- Item Details Table Start -->
 			<div class="card-body">
 				<div class="mat-table-wrapper">
 					<mat-table #table [dataSource]="dataSource">
@@ -275,14 +270,18 @@
 						<!-- Actions Column -->
 						<ng-container matColumnDef="actions">
 							<mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
-							<mat-cell *matCellDef="let product; let index = index">
-								<button mat-icon-button color="primary" (click)="editSaleItemsProduct(product)">
+							<mat-cell *matCellDef="let item; let index = index">
+								<button
+									mat-icon-button
+									color="primary"
+									(click)="editSaleItemsItem(item)"
+								>
 									<mat-icon>create</mat-icon></button
 								>&nbsp;
 								<button
 									mat-icon-button
 									color="warn"
-									(click)="removeFromSaleItems(product.id)"
+									(click)="removeFromSaleItems(item.id)"
 									type="button"
 								>
 									<mat-icon>delete</mat-icon>
@@ -320,11 +319,11 @@
 					<mat-paginator
 						[pageSize]="pageSize"
 						[showFirstLastButtons]="true"
-						[length]="totalProducts"
+						[length]="totalItems"
 					></mat-paginator>
 				</div>
 			</div>
-			<!-- Product Details Table End -->
+			<!-- Item Details Table End -->
 			<div class="card-footer">
 				<div class="d-flex justify-content-between">
 					<div class="mr-2"></div>
