--- a/admin/src/app/pages/sales/sales.component.html
+++ b/admin/src/app/pages/sales/sales.component.html
@@ -8,7 +8,7 @@
 		</div>
 	</div>
 	<div>
-		<form class="form" (ngSubmit)="onSubmit()" #f="ngForm">
+		<form class="form" (ngSubmit)="onSubmit(saleForm)" #saleForm="ngForm">
 			<!-- Sales Form Start -->
 			<div class="card-body">
 				<div class="card-body-progress">
@@ -16,7 +16,7 @@
 				</div>
 
 				<div class="form-group row">
-					<div class="col-lg-6 kt-margin-bottom-20-mobile">
+					<div class="col-lg-4 kt-margin-bottom-20-mobile">
 						<mat-form-field class="mat-form-field-fluid">
 							<mat-select
 								placeholder="Company Head"
@@ -35,6 +35,18 @@
 								Company Head is
 								<strong>required</strong>
 							</mat-error>
+						</mat-form-field>
+					</div>
+
+					<div class="col-lg-2 kt-margin-bottom-20-mobile">
+						<mat-form-field class="mat-form-field-fluid">
+							<input
+								type="date"
+								matInput
+								placeholder="Date"
+								name="date"
+								[(ngModel)]="sale.date"
+							/>
 						</mat-form-field>
 					</div>
 
@@ -327,11 +339,10 @@
 					<div>
 						&nbsp;
 						<button
-							type="button"
+							type="submit"
 							mat-raised-button
 							color="primary"
-							[disabled]="f.invalid || f.pristine"
-							(click)="save()"
+							[disabled]="saleForm.invalid || saleForm.pristine"
 						>
 							Save
 						</button>
