company heads fetch from backend and save

--- a/admin/src/app/pages/sales/sales.component.html
+++ b/admin/src/app/pages/sales/sales.component.html
@@ -20,8 +20,8 @@
 						<mat-form-field class="mat-form-field-fluid">
 							<mat-select
 								placeholder="Company Head"
-								name="company_head"
-								[(ngModel)]="sale.company_head"
+								name="company_head_id"
+								[(ngModel)]="sale.company_head_id"
 								required
 							>
 								<mat-option
