--- a/admin/src/app/modules/auth/auth.component.html
+++ b/admin/src/app/modules/auth/auth.component.html
@@ -1,12 +1,7 @@
 <div class="d-flex flex-column flex-root h-100" id="kt_login_wrapper">
 	<!--begin::Login-->
 	<div
-		class="
-			login login-1 login-signin-on
-			d-flex
-			flex-column flex-lg-row flex-column-fluid
-			bg-white
-		"
+		class="login login-1 login-signin-on d-flex flex-column flex-lg-row flex-column-fluid bg-white"
 		id="kt_login"
 	>
 		<!--begin::Aside-->
@@ -39,12 +34,7 @@
 
 			<!--begin::Aside Bottom-->
 			<div
-				class="
-					aside-img
-					d-flex
-					flex-row-fluid
-					bgi-no-repeat bgi-position-y-bottom bgi-position-x-center
-				"
+				class="aside-img d-flex flex-row-fluid bgi-no-repeat bgi-position-y-bottom bgi-position-x-center"
 				style="
 					background-image: url('./assets/media/svg/illustrations/login-visual-4.svg');
 				"
@@ -55,17 +45,7 @@
 
 		<!--begin::Content-->
 		<div
-			class="
-				login-content
-				flex-row-fluid
-				d-flex
-				flex-column
-				justify-content-center
-				position-relative
-				overflow-hidden
-				p-7
-				mx-auto
-			"
+			class="login-content flex-row-fluid d-flex flex-column justify-content-center position-relative overflow-hidden p-7 mx-auto"
 		>
 			<!--begin::Content body-->
 			<div class="d-flex flex-column-fluid flex-center">
@@ -75,15 +55,10 @@
 
 			<!--begin::Content footer-->
 			<div
-				class="
-					d-flex
-					justify-content-lg-start justify-content-center
-					align-items-end
-					py-7 py-lg-0
-				"
+				class="d-flex justify-content-lg-start justify-content-center align-items-end py-7 py-lg-0"
 			>
 				<a class="text-primary font-weight-bolder font-size-h5"
-					>© 2020 Dastak</a
+					>© 2020 Capri Traders</a
 				>
 			</div>
 			<!--end::Content footer-->
