--- a/admin/src/app/pages/sales/sales.component.html
+++ b/admin/src/app/pages/sales/sales.component.html
@@ -245,61 +245,85 @@
 			<!-- Item Details Table Start -->
 			<div class="card-body">
 				<div class="mat-table-wrapper">
-					<mat-table #table [dataSource]="dataSource">
+					<mat-table
+						#table
+						[dataSource]="dataSource"
+						matSort
+						#sort1="matSort"
+						matSortActive="date_str"
+						matSortDirection="desc"
+						matSortDisableClear
+					>
 						<!--- Note that these columns can be defined in any order.
 				The actual rendered columns are set as a property on the row definition" -->
 						<!-- Name Column -->
 						<ng-container matColumnDef="name">
-							<mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+							<mat-header-cell *matHeaderCellDef mat-sort-header>
+								Name
+							</mat-header-cell>
 							<mat-cell *matCellDef="let element">
 								{{ element.name }}
 							</mat-cell>
 						</ng-container>
 
 						<ng-container matColumnDef="brand">
-							<mat-header-cell *matHeaderCellDef> Brand </mat-header-cell>
+							<mat-header-cell *matHeaderCellDef mat-sort-header>
+								Brand
+							</mat-header-cell>
 							<mat-cell *matCellDef="let element">
 								{{ element.brand ? element.brand.name : '' }}
 							</mat-cell>
 						</ng-container>
 
 						<ng-container matColumnDef="quantity">
-							<mat-header-cell *matHeaderCellDef> Quantity </mat-header-cell>
+							<mat-header-cell *matHeaderCellDef mat-sort-header>
+								Quantity
+							</mat-header-cell>
 							<mat-cell *matCellDef="let element">
 								{{ element.quantity }}
 							</mat-cell>
 						</ng-container>
 
 						<ng-container matColumnDef="rate">
-							<mat-header-cell *matHeaderCellDef> Rate </mat-header-cell>
+							<mat-header-cell *matHeaderCellDef mat-sort-header>
+								Rate
+							</mat-header-cell>
 							<mat-cell *matCellDef="let element">
 								{{ element.rate }}
 							</mat-cell>
 						</ng-container>
 
 						<ng-container matColumnDef="discount">
-							<mat-header-cell *matHeaderCellDef> Discount </mat-header-cell>
+							<mat-header-cell *matHeaderCellDef mat-sort-header>
+								Discount
+							</mat-header-cell>
 							<mat-cell *matCellDef="let element">
 								{{ element.discount }}
 							</mat-cell>
 						</ng-container>
 
 						<ng-container matColumnDef="description">
-							<mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
+							<mat-header-cell *matHeaderCellDef mat-sort-header>
+								Description
+							</mat-header-cell>
 							<mat-cell *matCellDef="let element">
 								{{ element.description }}
 							</mat-cell>
 						</ng-container>
 
 						<ng-container matColumnDef="image">
-							<mat-header-cell *matHeaderCellDef> Image </mat-header-cell>
+							<mat-header-cell *matHeaderCellDef mat-sort-header>
+								Image
+							</mat-header-cell>
 							<mat-cell *matCellDef="let element">
 								<img [src]="element.image_url" class="img-fluid w-75" />
 							</mat-cell>
 						</ng-container>
 						<!-- Actions Column -->
 						<ng-container matColumnDef="actions">
-							<mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+							<mat-header-cell *matHeaderCellDef mat-sort-header>
+								Actions
+							</mat-header-cell>
 							<mat-cell *matCellDef="let item; let index = index">
 								<a
 									mat-icon-button
