edit item rate and unit quantity logic changed

--- a/admin/src/app/pages/sales/add-or-edit/add-or-edit.component.html
+++ b/admin/src/app/pages/sales/add-or-edit/add-or-edit.component.html
@@ -326,11 +326,11 @@
 						<mat-header-cell *matHeaderCellDef mat-sort-header>
 							Actions
 						</mat-header-cell>
-						<mat-cell *matCellDef="let item; let index = index">
+						<mat-cell *matCellDef="let sale_item; let index = index">
 							<a
 								mat-icon-button
 								color="primary"
-								(click)="editSaleItemsItem(item, index)"
+								(click)="editSaleItemsItem(sale_item, index)"
 							>
 								<mat-icon>create</mat-icon></a
 							>&nbsp;
