--- a/admin/src/app/pages/sales/edit/edit.component.html
+++ b/admin/src/app/pages/sales/edit/edit.component.html
@@ -10,7 +10,7 @@
 					type="number"
 					class="form-control"
 					placeholder="Quantity"
-					[(ngModel)]="item.quantity"
+					[(ngModel)]="sale_item.unit_quantity"
 					name="quantity"
 					required
 				/>
@@ -22,7 +22,7 @@
 					type="number"
 					class="form-control"
 					placeholder="Rate"
-					[(ngModel)]="item.rate"
+					[(ngModel)]="sale_item.rate"
 					name="rate"
 					required
 				/>
@@ -34,7 +34,7 @@
 					type="text"
 					class="form-control"
 					placeholder="Description"
-					[(ngModel)]="item.description"
+					[(ngModel)]="sale_item.description"
 					name="description"
 					required
 				/>
