--- a/admin/src/app/components/sale-purchase-shared/add-or-edit/add-or-edit.component.html
+++ b/admin/src/app/components/sale-purchase-shared/add-or-edit/add-or-edit.component.html
@@ -21,7 +21,7 @@
 							<mat-select
 								placeholder="Company Head"
 								name="company_head_id"
-								[(ngModel)]="sale.company_head_id"
+								[(ngModel)]="object.company_head_id"
 								required
 							>
 								<mat-option
@@ -45,7 +45,7 @@
 								matInput
 								placeholder="Date"
 								name="date"
-								[(ngModel)]="sale.date"
+								[(ngModel)]="object.date"
 								rewuired
 							/>
 							<mat-error>
@@ -62,7 +62,7 @@
 								matInput
 								placeholder="Bill/Ref#"
 								name="bill_no"
-								[(ngModel)]="sale.bill_no"
+								[(ngModel)]="object.bill_no"
 								required
 							/>
 							<mat-error>
@@ -79,7 +79,7 @@
 								matInput
 								placeholder="PO#"
 								name="po_no"
-								[(ngModel)]="sale.po_no"
+								[(ngModel)]="object.po_no"
 								required
 							/>
 							<mat-error>
@@ -96,7 +96,7 @@
 								matInput
 								placeholder="GRN"
 								name="grn"
-								[(ngModel)]="sale.grn"
+								[(ngModel)]="object.grn"
 								required
 							/>
 							<mat-error>
@@ -113,7 +113,7 @@
 							<mat-select
 								placeholder="Party"
 								name="party_id"
-								[(ngModel)]="sale.party_id"
+								[(ngModel)]="object.party_id"
 								required
 							>
 								<mat-option *ngFor="let party of parties" [value]="party.id">
@@ -132,7 +132,7 @@
 							<mat-select
 								placeholder="Pay Mode"
 								name="pay_mode"
-								[(ngModel)]="sale.pay_mode"
+								[(ngModel)]="object.pay_mode"
 								required
 							>
 								<mat-option
@@ -153,7 +153,7 @@
 							<mat-select
 								placeholder="Pay Status"
 								name="pay_status"
-								[(ngModel)]="sale.pay_status"
+								[(ngModel)]="object.pay_status"
 								required
 							>
 								<mat-option
@@ -176,7 +176,7 @@
 								type="text"
 								placeholder="Remarks"
 								name="remarks"
-								[(ngModel)]="sale.remarks"
+								[(ngModel)]="object.remarks"
 							/>
 						</mat-form-field>
 					</div>
@@ -260,8 +260,8 @@
 						<mat-header-cell *matHeaderCellDef mat-sort-header>
 							Name
 						</mat-header-cell>
-						<mat-cell *matCellDef="let sale_item">
-							{{ sale_item.item.name }}
+						<mat-cell *matCellDef="let object_item">
+							{{ object_item.item.name }}
 						</mat-cell>
 					</ng-container>
 
@@ -269,8 +269,8 @@
 						<mat-header-cell *matHeaderCellDef mat-sort-header>
 							Brand
 						</mat-header-cell>
-						<mat-cell *matCellDef="let sale_item">
-							{{ sale_item.item.brand ? sale_item.item.brand.name : '' }}
+						<mat-cell *matCellDef="let object_item">
+							{{ object_item.item.brand ? object_item.item.brand.name : '' }}
 						</mat-cell>
 					</ng-container>
 
@@ -278,8 +278,8 @@
 						<mat-header-cell *matHeaderCellDef mat-sort-header>
 							Quantity
 						</mat-header-cell>
-						<mat-cell *matCellDef="let sale_item">
-							{{ sale_item.unit_quantity }}
+						<mat-cell *matCellDef="let object_item">
+							{{ object_item.unit_quantity }}
 						</mat-cell>
 					</ng-container>
 
@@ -287,8 +287,8 @@
 						<mat-header-cell *matHeaderCellDef mat-sort-header>
 							Rate
 						</mat-header-cell>
-						<mat-cell *matCellDef="let sale_item">
-							{{ sale_item.rate }}
+						<mat-cell *matCellDef="let object_item">
+							{{ object_item.rate }}
 						</mat-cell>
 					</ng-container>
 
@@ -296,8 +296,8 @@
 						<mat-header-cell *matHeaderCellDef mat-sort-header>
 							Discount
 						</mat-header-cell>
-						<mat-cell *matCellDef="let sale_item">
-							{{ sale_item.item.discount }}
+						<mat-cell *matCellDef="let object_item">
+							{{ object_item.item.discount }}
 						</mat-cell>
 					</ng-container>
 
@@ -305,8 +305,8 @@
 						<mat-header-cell *matHeaderCellDef mat-sort-header>
 							Description
 						</mat-header-cell>
-						<mat-cell *matCellDef="let sale_item">
-							{{ sale_item.item.description }}
+						<mat-cell *matCellDef="let object_item">
+							{{ object_item.item.description }}
 						</mat-cell>
 					</ng-container>
 
@@ -314,8 +314,8 @@
 						<mat-header-cell *matHeaderCellDef mat-sort-header>
 							Image
 						</mat-header-cell>
-						<mat-cell *matCellDef="let sale_item">
-							<img [src]="sale_item.item.image_url" class="img-fluid w-75" />
+						<mat-cell *matCellDef="let object_item">
+							<img [src]="object_item.item.image_url" class="img-fluid w-75" />
 						</mat-cell>
 					</ng-container>
 					<!-- Actions Column -->
@@ -323,18 +323,18 @@
 						<mat-header-cell *matHeaderCellDef mat-sort-header>
 							Actions
 						</mat-header-cell>
-						<mat-cell *matCellDef="let sale_item; let index = index">
+						<mat-cell *matCellDef="let object_item; let index = index">
 							<a
 								mat-icon-button
 								color="primary"
-								(click)="editSaleItemsItem(sale_item, index)"
+								(click)="editObjectItemsItem(object_item, index)"
 							>
 								<mat-icon>create</mat-icon></a
 							>&nbsp;
 							<a
 								mat-icon-button
 								color="warn"
-								(click)="removeFromSaleItems(index)"
+								(click)="removeFromObjectItems(index)"
 								type="button"
 							>
 								<mat-icon>delete</mat-icon>
@@ -395,7 +395,9 @@
 						mat-raised-button
 						color="primary"
 						[disabled]="
-							saleForm.invalid || saleForm.pristine || !sale.sale_items.length
+							saleForm.invalid ||
+							saleForm.pristine ||
+							!object.object_items.length
 						"
 						(click)="onSubmit(saleForm, false)"
 					>
