update button hidden when edit mode

--- a/admin/src/app/components/sale-purchase-shared/add-or-edit/add-or-edit.component.html
+++ b/admin/src/app/components/sale-purchase-shared/add-or-edit/add-or-edit.component.html
@@ -381,6 +381,7 @@
 				<div>
 					&nbsp;
 					<button
+						*ngIf="this.mode === 'ADD'"
 						type="submit"
 						mat-raised-button
 						color="primary"
