company head and party component backend

--- a/admin/src/app/pages/parties/parties.component.html
+++ b/admin/src/app/pages/parties/parties.component.html
@@ -4,9 +4,7 @@
 			<h3>Pasrties</h3>
 		</div>
 		<div class="card-toolbar">
-			<button class="btn btn-primary" (click)="addParty()">
-				Add Company Head
-			</button>
+			<button class="btn btn-primary" (click)="addParty()">Add Party</button>
 		</div>
 	</div>
 	<div class="card-body">
