--- a/admin/src/app/pages/ledger/ledger.component.html
+++ b/admin/src/app/pages/ledger/ledger.component.html
@@ -63,7 +63,7 @@
 						<div class="col-lg-3 kt-margin-bottom-10-mobile">
 							<mat-form-field class="mat-form-field-fluid">
 								<mat-select
-									placeholder="Company Head"
+									placeholder="Party"
 									name="party_id"
 									[formControl]="party_id"
 								>
